--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-spring.application.name=react-spring
+spring:
+  application:
+    name: react-spring
+server:
+  port: 8888
+
+openai:
+  apiKey: ${OPENAI_API_KEY}
+  baseUrl: https://api.openai.com/v1
